# docs/swagger.json
@@ -5,6 +5,35 @@
     },
     "paths": {
         "/address": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get all addresses",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "address"
+                ],
+                "summary": "Get all addresses",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dtos.AddressDTO"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create an address",
                 "consumes": [
@@ -24,7 +53,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.AddressRegisterRequest"
+                            "$ref": "#/definitions/dtos.AddressDTO"
                         }
                     }
                 ],
@@ -33,6 +62,115 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Address"
+                        }
+                    }
+                }
+            }
+        },
+        "/address/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get an address",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "address"
+                ],
+                "summary": "Get an address",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Address ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.AddressDTO"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete an address",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "address"
+                ],
+                "summary": "Delete an address",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Address ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Address deleted",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/address/{id}/main": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Mark an address as default",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "address"
+                ],
+                "summary": "Mark an address as default",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Address ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -81,7 +219,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.userRegisterRequest"
+                            "$ref": "#/definitions/dtos.UserRegisterDTO"
                         }
                     }
                 ],
@@ -89,7 +227,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/dtos.UserDTO"
                         }
                     },
                     "400": {
@@ -121,7 +259,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.userLoginRequest"
+                            "$ref": "#/definitions/dtos.UserLoginDTO"
                         }
                     }
                 ],
@@ -129,7 +267,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.userLoginResponse"
+                            "$ref": "#/definitions/dtos.UserLoginResponseDTO"
                         }
                     },
                     "400": {
@@ -143,7 +281,68 @@
         }
     },
     "definitions": {
-        "controller.userLoginRequest": {
+        "dtos.AddressDTO": {
+            "type": "object",
+            "required": [
+                "city",
+                "country",
+                "neighborhood",
+                "number",
+                "state",
+                "street",
+                "zip_code"
+            ],
+            "properties": {
+                "city": {
+                    "type": "string"
+                },
+                "complement": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "main_address": {
+                    "type": "boolean"
+                },
+                "neighborhood": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "street": {
+                    "type": "string"
+                },
+                "zip_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.UserDTO": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.UserLoginDTO": {
             "type": "object",
             "required": [
                 "email",
@@ -158,7 +357,7 @@
                 }
             }
         },
-        "controller.userLoginResponse": {
+        "dtos.UserLoginResponseDTO": {
             "type": "object",
             "properties": {
                 "refresh_token": {
@@ -169,7 +368,7 @@
                 }
             }
         },
-        "controller.userRegisterRequest": {
+        "dtos.UserRegisterDTO": {
             "type": "object",
             "required": [
                 "confirm_password",
@@ -196,44 +395,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "dtos.AddressRegisterRequest": {
-            "type": "object",
-            "required": [
-                "city",
-                "country",
-                "neighborhood",
-                "number",
-                "state",
-                "street",
-                "zip_code"
-            ],
-            "properties": {
-                "city": {
-                    "type": "string"
-                },
-                "complement": {
-                    "type": "string"
-                },
-                "country": {
-                    "type": "string"
-                },
-                "neighborhood": {
-                    "type": "string"
-                },
-                "number": {
-                    "type": "string"
-                },
-                "state": {
-                    "type": "string"
-                },
-                "street": {
-                    "type": "string"
-                },
-                "zip_code": {
                     "type": "string"
                 }
             }
@@ -266,6 +427,9 @@
                     "type": "string"
                 },
                 "street": {
+                    "type": "string"
+                },
+                "userID": {
                     "type": "string"
                 },
                 "zipCode": {
