# internal/models/dtos/address_dto.go
@@ -2,7 +2,8 @@ package dtos
 
 import "eccom-mongo/internal/models"
 
-type AddressRegisterRequest struct {
+type AddressDTO struct {
+	Id           string `json:"id"`
 	Street       string `json:"street" binding:"required"`
 	Number       string `json:"number" binding:"required"`
 	Complement   string `json:"complement"`
@@ -11,9 +12,10 @@ type AddressRegisterRequest struct {
 	State        string `json:"state" binding:"required"`
 	Country      string `json:"country" binding:"required"`
 	ZipCode      string `json:"zip_code" binding:"required"`
+	MainAddress  bool   `json:"main_address"`
 }
 
-func (a *AddressRegisterRequest) ToAddress() *models.Address {
+func (a *AddressDTO) ToAddress() *models.Address {
 	return &models.Address{
 		Street:       a.Street,
 		Number:       a.Number,
@@ -23,5 +25,20 @@ func (a *AddressRegisterRequest) ToAddress() *models.Address {
 		State:        a.State,
 		Country:      a.Country,
 		ZipCode:      a.ZipCode,
+	}
+}
+
+func NewAddressDTO(address *models.Address) *AddressDTO {
+	return &AddressDTO{
+		Id:           address.ID.Hex(),
+		Street:       address.Street,
+		Number:       address.Number,
+		Complement:   address.Complement,
+		Neighborhood: address.Neighborhood,
+		City:         address.City,
+		State:        address.State,
+		Country:      address.Country,
+		ZipCode:      address.ZipCode,
+		MainAddress:  address.MainAddress,
 	}
 }
